--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="/style.251b6741.css">
+    <link rel="stylesheet" href="style.251b6741.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="/jquery-3.6.0.min.b2531a04.js"></script>
-<script src="/style.251b6741.js"></script></head>
+    <script src="jquery-3.6.0.min.b2531a04.js"></script>
+<script src="style.251b6741.js"></script></head>
 <body>
     <nav class="navigation">
         <div class="navigation__bar">
@@ -51,6 +51,6 @@
         </div>
     </section>
 
-    <script type="module" src="/js.00a46daa.js"></script>
+    <script type="module" src="js.00a46daa.js"></script>
 </body>
 </html>
