--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <nav class="navigation">
@@ -13,8 +13,8 @@
             <p class="logo" onclick='location.href="#HOME"'>REED<span>ZAMAN</span></p>
 		    <div class="navigation__menu_horizontal" id="NAV__H">
 		        <ul>
-			        <li><a class="navigation__menu_horizontal__a" href="#">Other Tools</a></li>
-			        <li><a class="navigation__menu_horizontal__a" href="#">Github</a></li>
+				<li><a class="navigation__menu_horizontal__a" href="#">Other Tools</a></li>
+				<li><a class="navigation__menu_horizontal__a" href="#">Github</a></li>
 		        </ul>
 		    </div>
         </div>
@@ -50,7 +50,6 @@
 
         </div>
     </section>
-
     <script type="module" src="js/index.js"></script>
 </body>
 </html>
