adding dark theme

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="js/jquery-3.6.0.min.js"></script>
 </head>
-<body>
+<body class="">
     <nav class="navigation">
         <div class="navigation__bar">
-            <p class="logo" onclick='location.href="#HOME"'>REED<span>ZAMAN</span></p>
+            <p class="logo" onclick='location.href="#HOME"'>Typer<span>Typer</span></p>
 		    <div class="navigation__menu_horizontal" id="NAV__H">
 		        <ul>
+				<li><a id="theme" class="theme" href="#"><span id="theme-icon" class="material-icons">dark_mode</span></a></li>
 				<li><a class="navigation__menu_horizontal__a" href="#">Other Tools</a></li>
 				<li><a class="navigation__menu_horizontal__a" href="#">Github</a></li>
 		        </ul>
